@@ -25,8 +25,9 @@ class CCaptchaValidator extends CValidator
 	 */
 	public $caseSensitive=false;
 	/**
-	 * @var string ID of the action that renders the CAPTCHA image. Defaults to 'captcha'.
-	 * Note, the action must belong to the current controller.
+	 * @var string ID of the action that renders the CAPTCHA image. Defaults to 'captcha',
+	 * meaning the 'captcha' action declared in the current controller.
+	 * This can also be a route consisting of controller ID and action ID.
 	 */
 	public $captchaAction='captcha';
 	/**
@@ -48,8 +49,19 @@ class CCaptchaValidator extends CValidator
 			return;
 
 		if(($captcha=Yii::app()->getController()->createAction($this->captchaAction))===null)
-			throw new CException(Yii::t('yii','CCaptchaValidator.action "{id}" is invalid. Unable to find such an action in the current controller.',
-					array('{id}'=>$this->captchaAction)));
+		{
+			if(strpos($this->captchaAction,'/')!==false) // contains controller or module
+			{
+				if(($ca=Yii::app()->createController($this->captchaAction))!==null)
+				{
+					list($controller,$actionID)=$ca;
+					$captcha=$controller->createAction($actionID);
+				}
+			}
+			if($captcha===null)
+				throw new CException(Yii::t('yii','CCaptchaValidator.action "{id}" is invalid. Unable to find such an action in the current controller.',
+						array('{id}'=>$this->captchaAction)));
+		}
 		if(!$captcha->validate($value,$this->caseSensitive))
 		{
 			$message=$this->message!==null?$this->message:Yii::t('yii','The verification code is incorrect.');
